modules/resources/routeTable.tf
resource "aws_route_table" "rt" {
 vpc_id = aws_vpc.mainVpc.id
 
 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.igw.id
 }
}
